--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ lazy_static = "1.4.0"
 regex = "1.7.3"
 songbird = {version = "0.3.2", features = ["yt-dlp", "builtin-queue"]}
 url = "2.3.1"
+
+reqwest = "0.11.16"
+image = "0.24.6"
+color-thief = "0.2"
