--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,20 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
-mongodb = "2.5.0"
-serde = "1.0.163"
-serde_derive = "1.0.163"
-toml = "0.7.3"
-poise = "0.5.5"
-chrono = "0.4.24"
-itertools = "0.11.0"
-lazy_static = "1.4.0"
-regex = "1.8.1"
-songbird = {version = "0.3.2", features = ["yt-dlp", "builtin-queue"]}
-url = "2.3.1"
-rgb = "0.8.36"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+mongodb = "3"
+serde = "1"
+serde_derive = "1"
+toml = "0.8"
+poise = "0.6"
+chrono = "0.4"
+itertools = "0.13"
+regex = "1"
+songbird = {version = "0.4", features = ["builtin-queue"]}
+url = "2"
+rgb = "0.8"
 
-reqwest = "0.11.17"
-image = "0.24.6"
+reqwest = "0.11"
+image = "0.25"
 color-thief = "0.2"
+symphonia = { version = "0.5", features = ["all", "opt-simd"] }
